configurable inatcivity threshold time

--- a/options.html
+++ b/options.html
@@ -137,6 +137,22 @@
         readonly
       ></textarea>
 
+      <h2>3. Inactivity window</h2>
+      <p>
+        A tab will only be auto-closed if it has not been <strong>active (focused)</strong> for at least this long.
+      </p>
+      <label for="inactivity-threshold">
+        Inactive for:
+        <select id="inactivity-threshold">
+          <option value="3">3 hours</option>
+          <option value="12">12 hours</option>
+          <option value="24" selected>1 day</option>
+          <option value="72">3 days</option>
+          <option value="168">7 days</option>
+        </select>
+      </label>
+      <div id="settings-status" class="status"></div>
+
       <h2>Activity</h2>
       <div id="activity-log" class="log"></div>
     </div>
