updated the inactivity threshold choices

--- a/options.html
+++ b/options.html
@@ -144,7 +144,10 @@
       <label for="inactivity-threshold">
         Inactive for:
         <select id="inactivity-threshold">
+          <option value="1">1 hour</option>
+          <option value="2">2 hours</option>
           <option value="3">3 hours</option>
+          <option value="6">6 hours</option>
           <option value="12">12 hours</option>
           <option value="24" selected>1 day</option>
           <option value="72">3 days</option>
