changing the project name to TabVault

--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tab Watch Later – Settings</title>
+    <title>TabVault – Settings</title>
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -111,7 +111,7 @@
   </head>
   <body>
     <div class="card">
-      <h1>Tab Watch Later → Obsidian</h1>
+      <h1>TabVault</h1>
       <p>
         Any tab that sits open for more than <strong>1 day</strong> will be closed and added to your
         personal <strong>Watch Later</strong> list, ready to read inside your Obsidian vault.
